# birds

./: .env.sample  .gitignore  AGENTS.md  README.md  main.py  requirements.txt
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/dal/: ebird.py
backend/app/dal/auth/: file.py
backend/app/manager/: birdspot.py  ebird.py  job.py  regions.py
backend/app/model/: bird.py  ebird_types.py  list.py  user.py
backend/data/regions/: all_regions_flat.json  country_AD_regions.json  country_AE_regions.json  country_AF_regions.json  country_AG_regions.json  country_AL_regions.json  country_AM_regions.json  country_AO_regions.json  country_AR_regions.json  country_AT_regions.json  country_AU_regions.json  country_AZ_regions.json  country_BA_regions.json  country_BB_regions.json  country_BD_regions.json  country_BE_regions.json  country_BF_regions.json  country_BG_regions.json  country_BH_regions.json  country_BI_regions.json  country_BJ_regions.json  country_BN_regions.json  country_BO_regions.json  country_BQ_regions.json  country_BR_regions.json  country_BS_regions.json  country_BT_regions.json  country_BW_regions.json  country_BY_regions.json  country_BZ_regions.json  country_CA_regions.json  country_CD_regions.json  country_CF_regions.json  country_CG_regions.json  country_CH_regions.json  country_CI_regions.json  country_CL_regions.json  country_CM_regions.json  country_CN_regions.json  country_CO_regions.json  (+161 more)
backend/lib/: auth.py  cache.py  logging_config.py  trie.py
backend/scripts/: regions.py
backend/tests/lib/: trie.py
frontend/: .gitignore  (+5 more)
(+66 files in other folders)
