[project]
name = "birds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "dill>=0.4.0",
    "dotenv>=0.9.9",
    "hiredis>=3.3.0",
    "minject>=1.5.0",
    "pyjwt>=2.10.1",
    "pympler>=1.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sanic==23.12.1",
    "sanic-cors==2.2.0",
    "sanic-ext>=24.12.0",
]
